src/objects/loan__Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>loan__Draw_Period_Interest_Calculation__c</fullName>
        <label>Draw Period Interest Calculation</label>
        <picklist>
            <controllingField>loan__Draw_Billing_Method__c</controllingField>
            <picklistValues>
                <fullName>Simple Interest</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Compounding Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Draw_Term_Payment_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Line of Credit</description>
        <label>Draw Term Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Due_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Day for the loan account.</description>
        <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
        <label>Current Due Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Early_Pre_Payment_Penalty_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked and account is passed it&apos;s maturity date then we do not asses pre payment penalty fees.</description>
        <label>Early Pre Payment Penalty Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Enabled_Broker_Count__c</fullName>
        <label>Enabled Broker Count</label>
        <summaryFilterItems>
            <field>loan__Broker__c.loan__Enabled__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Broker__c.loan__Lending_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Excess__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Payment Amount which is allocated towards excess on the account.
This amount did not reduce any of the running balance on this account.</inlineHelpText>
        <label>Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Expected_Disbursal_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>This is the expected date on which the loan will be disbursed to the customer, this date will be used to derive the contract date.</inlineHelpText>
        <label>Expected Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Expected_Repayment_Start_Date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <inlineHelpText>This will be the date from when the customer will be start making the payments on this contract. The first payment date will be derived from payment start date.</inlineHelpText>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Accrued__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Fee Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Set__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fee Set</description>
        <inlineHelpText>Lookup to associate the fee set on this lending account. Only the fees defined within the fee set can be assessed on this contract.
To create a fee set, Servicing configuration-&gt;Product-&gt;Manage fee set</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Paid</description>
        <inlineHelpText>Fees Paid</inlineHelpText>
        <label>Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Remaining</description>
        <inlineHelpText>Fees remaining</inlineHelpText>
        <label>Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fees_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total fees amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total fees amount, which has been suspended.</inlineHelpText>
        <label>Fees Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__First_Installment_Date__c</fullName>
        <description>Date of the first installment</description>
        <inlineHelpText>This is the desired start date of the repayment schedule that is provided while creating the loan application.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Floating_Rate_Index__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Floating Rate Index linked to the Loan Product</inlineHelpText>
        <label>Floating Rate Index</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Floating_Rate_Index__c.loan__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
        <relationshipName>lending_account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fractionalization_Status__c</fullName>
        <description>Describes whether loan is activated for Fractionalization.</description>
        <label>Fractionalization Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Frequency_of_Loan_Payment__c</fullName>
        <inlineHelpText>This decides the Payment Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly  
Quarterly
Semi-Annual
Annual 
Single-Payment</inlineHelpText>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly-PD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Funder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Funder</label>
        <referenceTo>loan__Funder__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Funding_Stop_Basis__c</fullName>
        <inlineHelpText>If Funding Stop Basis is set to &apos;Draw Period End&apos; then no further funding is allowed after Draw Period End Date</inlineHelpText>
        <label>Funding Stop Basis</label>
        <picklist>
            <controllingField>loan__Funding_in_Tranches__c</controllingField>
            <picklistValues>
                <fullName>Draw Period End</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Funding_in_Tranches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked, if Funding in Tranches is allowed</inlineHelpText>
        <label>Funding in Tranches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Grace_Period_for_Repayments__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the number of grace days for which the system waits, before applying late charges on the loan.</inlineHelpText>
        <label>Late Charge Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipName>Loan_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Include_In_Metro2_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Metro 2 Format is the current standard electronic data reporting format for credit. You can generate a Metro 2 file only when &apos;Include in Metro 2 file&apos; is checked..</inlineHelpText>
        <label>Include In Credit Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Income_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Income Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Index_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Index Rate of the Floating Interest Rate Type Loan Product</inlineHelpText>
        <label>Current Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This field gets updated on Payment Date. It is the accrued interest that is posted on the account.</description>
        <inlineHelpText>Interest balance as of last accrual date.</inlineHelpText>
        <label>Interest Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Calculation_Method__c</fullName>
        <description>Billing Method.</description>
        <inlineHelpText>Flat - Interest computed every month on the original amount. 
Declining Balance - Interest calculated on the reduced principal balance.
Flexible Repayment - Interest calculated on the reduced principal balance with the change in interest rate.</inlineHelpText>
        <label>Interest Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declining Balance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Repayment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_On_Overdue_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on overdue amount paid so far.</description>
        <inlineHelpText>Interest on overdue amount paid so far.</inlineHelpText>
        <label>Interest On Overdue Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_On_Overdue_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the total interest on the overdue amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest on the overdue amount, which has been suspended.</inlineHelpText>
        <label>Interest On Overdue Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_On_Total_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on total overdue</description>
        <inlineHelpText>Interest on total overdue</inlineHelpText>
        <label>Interest On Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <inlineHelpText>In this period only Interest amount will be used to calculate the payment amount, after this period the payment amount will include principal and interest both.</inlineHelpText>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Paid
Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Interest Paid
Account Balance Details- Fields calculated by the system which cannot be edited.</inlineHelpText>
        <label>Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Posted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Posted on account</description>
        <inlineHelpText>Interest Posted on account.</inlineHelpText>
        <label>Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate_Last__c</fullName>
        <description>Last Interest Rate</description>
        <inlineHelpText>This is the last interest rate that was applied on the loan.</inlineHelpText>
        <label>Last Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate_Past_Maturity__c</fullName>
        <description>Interest Rate Past Maturity</description>
        <inlineHelpText>Interest rate Applicable after Maturity Date.</inlineHelpText>
        <label>Interest Rate Past Maturity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Rate__c</fullName>
        <description>Interest Rate</description>
        <inlineHelpText>Rate of Interest for the loan.</inlineHelpText>
        <label>Current Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unpaid Interest, accrued till last accrual date.</description>
        <inlineHelpText>Unpaid Interest, accrued till last accrual date.</inlineHelpText>
        <label>Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total interest amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest amount, which has been suspended.</inlineHelpText>
        <label>Interest Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Type__c</fullName>
        <inlineHelpText>This will be populated from lending product and must not be changed by the user.
Possible options for this field.
1) Fixed - Interest rate is fixed and will not change.
2) Floating- Interest rate can change based on the associated index rate.</inlineHelpText>
        <label>Interest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Waived interest Amount on this account.</inlineHelpText>
        <label>Interest Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_estimated__c</fullName>
        <inlineHelpText>Estimated Interest as per the Contract.</inlineHelpText>
        <label>Estimated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Invalid_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If system identify any data issues with this lending account, the reasons will be displayed on the top of lending account and this flag will be checked.
Once the issues are fixed, this flag will be unchecked by system.
User should not modify this flag.</inlineHelpText>
        <label>Invalid Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Is_Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will be checked once the lending account is rescheduled.
This should not be manually checked/unchecked by the user.</inlineHelpText>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Calculation_Method__c</fullName>
        <label>Amortization Method</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Bearing</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortization_Frequency__c</fullName>
        <label>Amortization Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LA_Amortized_Balance_Type__c</fullName>
        <label>Amortize Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interest</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Last_Accrual_Date__c</fullName>
        <description>Last accrual Date on loan account</description>
        <inlineHelpText>The date on which Interest was computed and posted on the Account.</inlineHelpText>
        <label>Last Accrual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Advance_Date__c</fullName>
        <description>Date when last Advance was made.</description>
        <inlineHelpText>Date when the  Advance was made.</inlineHelpText>
        <label>Last Advance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Bank_Transaction_Date__c</fullName>
        <label>Last Bank Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Billed_Amount__c</fullName>
        <label>Last Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Disbursal_Amount__c</fullName>
        <inlineHelpText>Last Disbursal Transaction Amount</inlineHelpText>
        <label>Last Disbursal Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Disbursal_Date__c</fullName>
        <description>Last Disbursal Transaction Date</description>
        <inlineHelpText>Last Disbursal Transaction Date</inlineHelpText>
        <label>Last Disbursal Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Installment_Date__c</fullName>
        <description>Maturity Date of Loan account</description>
        <inlineHelpText>Maturity date as per contract.</inlineHelpText>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Last Payment Received on this Account.</inlineHelpText>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Last_Payment_Date__c</fullName>
        <description>Date when last payment was received.</description>
        <inlineHelpText>Date when the  last payment was received.</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Last_Transaction_Id__c</fullName>
        <label>Last Transaction Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Last_Transaction_Timestamp__c</fullName>
        <inlineHelpText>This shows the date and time stamp of last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
        <label>Last Transaction Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Last_Transaction_Type__c</fullName>
        <inlineHelpText>This shows the last transaction happened on this contract.
This will be populated by system and must not be changed by user.</inlineHelpText>
        <label>Last Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PrincipalAdjustment-Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Accrual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursal Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursal Reversal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Limit Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Index Rate Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__LoanCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>LoanCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Loan Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Loan Amount</description>
        <inlineHelpText>This is the financed amount on the contract which will be disbursed to the customer.</inlineHelpText>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Cycle_Count__c</fullName>
        <label>Loan Cycle Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Effective_Date__c</fullName>
        <description>Effective Date of Loan account.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Loan Product Name</description>
        <inlineHelpText>Please choose a lending product, which will be associated as a lending product on this lending account.
You can choose a existing product from the lookup or create a new product from 
Servicing Configuration-&gt;Product-&gt;Create new lending product</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select active lending product.</errorMessage>
            <filterItems>
                <field>loan__Loan_Product__c.loan__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Purpose__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Loan Purpose</description>
        <inlineHelpText>Loan purpose</inlineHelpText>
        <label>Purpose</label>
        <referenceTo>loan__Loan_Purpose__c</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Status__c</fullName>
        <inlineHelpText>Status of the Account, expected values are :
Pending Approval
Active - Good Standing
Active - Bad Standing
Active - Matured
Approved
Canceled
Closed - Obligations met
Closed- Written Off
Closed - Refinanced
Partial Application</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Bad Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Obligations met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- Written Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Refinanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active - Matured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Billing_Type__c</fullName>
        <label>MCA Billing Type</label>
        <picklist>
            <controllingField>loan__MCA_Mode__c</controllingField>
            <picklistValues>
                <fullName>% of Revenue</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Fraction_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MCA Fraction Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Mode__c</fullName>
        <label>MCA Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Gateway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__MCA_Transaction_Category__c</fullName>
        <label>MCA Transaction Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Margin_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Margin Rate for Floating Interest Rate Loan</inlineHelpText>
        <label>Margin Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>loan__Maturity_Date_Current__c</fullName>
        <inlineHelpText>This is the date on which the the loan matures</inlineHelpText>
        <label>Current Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Advance_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Maximum Advance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Maximum_Draw_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Maximum Draw amount which can be given to the customer, applicable for line of credits.</inlineHelpText>
        <label>Maximum Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Account_Status_Code__c</fullName>
        <inlineHelpText>Contains the status code that properly identifies the current condition of the account as of the Date of Account Information</inlineHelpText>
        <label>Account Status Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Account_Type_Code__c</fullName>
        <inlineHelpText>Report the specific code that identifies the account classification.</inlineHelpText>
        <label>Account Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>7B - Agricultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A - Auto Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6A - Commercial Installment Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0F - Construction Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - Note Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Partially Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 - Rental Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Secured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Unsecured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Metro2_Account_highest_bal_amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Highest Outstanding Principal Balance Amount</description>
        <label>Highest Bal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>